--- a/tutorial_1/Introduction_to_PyTorch_assignments.ipynb
+++ b/tutorial_1/Introduction_to_PyTorch_assignments.ipynb
@@ -521,7 +521,7 @@
     "\n",
     "A crucial feature of PyTorch is the support of GPUs, short for Graphics Processing Unit. A GPU can perform many thousands of small operations in parallel, making it very well suitable for performing large matrix operations in neural networks. When comparing GPUs to CPUs, we can list the following main differences (credit: [Kevin Krewell, 2009](https://blogs.nvidia.com/blog/2009/12/16/whats-the-difference-between-a-cpu-and-a-gpu/)) \n",
     "\n",
-    "<center style=\"width: 100%\"><img src=\"comparison_CPU_GPU.png\" width=\"700px\"></center>\n",
+    "<center style=\"width: 100%\"><img src=\"https://i.imgur.com/jL2As2O.png\" width=\"700px\"></center>\n",
     "\n",
     "CPUs and GPUs have both different advantages and disadvantages, which is why many computers contain both components and use them for different tasks. In case you are not familiar with GPUs, you can read up more details in this [NVIDIA blog post](https://blogs.nvidia.com/blog/2009/12/16/whats-the-difference-between-a-cpu-and-a-gpu/) or [here](https://www.intel.com/content/www/us/en/products/docs/processors/what-is-a-gpu.html). \n",
     "\n",
