--- a/tutorial_1/Introduction_to_PyTorch_assignments.ipynb
+++ b/tutorial_1/Introduction_to_PyTorch_assignments.ipynb
@@ -648,7 +648,7 @@
     "Hence, we will learn how to build a small neural network that can learn this function. \n",
     "To make it a little bit more interesting, we move the XOR into continuous space and introduce some gaussian noise on the binary inputs. Our desired separation of an XOR dataset could look as follows:\n",
     "\n",
-    "<center style=\"width: 100%\"><img src=\"continuous_xor.svg\" width=\"350px\"></center>"
+    "<center style=\"width: 100%\"><img src=\"https://i.imgur.com/p1viXRH.png\" width=\"350px\"></center>"
    ]
   },
   {
