--- a/tutorial_1/Introduction_to_PyTorch_assignments.ipynb
+++ b/tutorial_1/Introduction_to_PyTorch_assignments.ipynb
@@ -720,7 +720,7 @@
     "#### Simple classifier\n",
     "We can now make use of the pre-defined modules in the `torch.nn` package, and define our own small neural network. We will use a minimal network with a input layer, one hidden layer with tanh as activation function, and a output layer. In other words, our networks should look something like this:\n",
     "\n",
-    "<center width=\"100%\"><img src=\"small_neural_network.svg\" width=\"300px\"></center>\n",
+    "<center width=\"100%\"><img src=\"https://i.imgur.com/gRc8PDb.png\" width=\"300px\"></center>\n",
     "\n",
     "The input neurons are shown in blue, which represent the coordinates $x_1$ and $x_2$ of a data point. The hidden neurons including a tanh activation are shown in white, and the output neuron in red.\n",
     "In PyTorch, we can define this as follows:"
