--- a/tutorial_1/Introduction_to_PyTorch_assignments.ipynb
+++ b/tutorial_1/Introduction_to_PyTorch_assignments.ipynb
@@ -1019,7 +1019,7 @@
    "source": [
     "#### Stochastic Gradient Descent\n",
     "\n",
-    "For updating the parameters, PyTorch provides the package `torch.optim` that has most popular optimizers implemented. We will discuss the specific optimizers and their differences later in the course, but will for now use the simplest of them: `torch.optim.SGD`. Stochastic Gradient Descent updates parameters by multiplying the gradients with a small constant, called learning rate, and subtracting those from the parameters (hence minimizing the loss). Therefore, we slowly move towards the direction of minimizing the loss. A good default value of the learning rate for a small network as ours is 0.1. "
+    "For updating the parameters, PyTorch provides the package `torch.optim` that has most popular optimizers implemented. For now, lets use: `torch.optim.SGD`. Stochastic Gradient Descent updates parameters by multiplying the gradients with a small constant, called learning rate, and subtracting those from the parameters (hence minimizing the loss). Therefore, we slowly move towards the direction of minimizing the loss. A good default value of the learning rate for a small network as ours is 0.1. "
    ]
   },
   {
