--- a/tutorial_1/Introduction_to_PyTorch_assignments.ipynb
+++ b/tutorial_1/Introduction_to_PyTorch_assignments.ipynb
@@ -429,7 +429,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "## TODO: Create a tensor with values [0.0, 1.0, 2.0] which is requires gradients\n",
+    "## TODO: Create a tensor with values [0.0, 1.0, 2.0] which requires gradients\n",
     "# Note that only float tensors can have gradients\n",
     "x = ...\n",
     "print(\"X\", x)"
