--- a/tutorial_1/Introduction_to_PyTorch_assignments.ipynb
+++ b/tutorial_1/Introduction_to_PyTorch_assignments.ipynb
@@ -600,14 +600,15 @@
     "\n",
     "## GPU version\n",
     "x = x.to(device)\n",
-    "# The first operation on a CUDA device can be slow as it has to establish a CPU-GPU communication first. \n",
-    "# Hence, we run an arbitrary command first without timing it for a fair comparison.\n",
-    "if torch.cuda.is_available():\n",
-    "    _ = torch.matmul(x*0.0, x)\n",
-    "start_time = time.time()\n",
+    "\n",
+    "# CUDA is asynchronous, so we need to use different timing functions\n",
+    "start = torch.cuda.Event(enable_timing=True)\n",
+    "end   = torch.cuda.Event(enable_timing=True)\n",
+    "start.record()\n",
     "_ = torch.matmul(x, x)\n",
-    "end_time = time.time()\n",
-    "print(\"GPU time: %6.5fs\" % (end_time - start_time))"
+    "end.record()\n",
+    "torch.cuda.synchronize()  # Waits for everything to finish running on the GPU\n",
+    "print(f\"GPU time: {0.001 * start.elapsed_time(end):6.5f}s\")  # Milliseconds to seconds"
    ]
   },
   {
