--- a/tutorial_1/Introduction_to_PyTorch_assignments.ipynb
+++ b/tutorial_1/Introduction_to_PyTorch_assignments.ipynb
@@ -596,7 +596,7 @@
     "start_time = time.time()\n",
     "_ = torch.matmul(x, x)\n",
     "end_time = time.time()\n",
-    "print(\"CPU time: %6.5fs\" % (end_time - start_time))\n",
+    "print(\"CPU time: %.5fs\" % (end_time - start_time))\n",
     "\n",
     "## GPU version\n",
     "x = x.to(device)\n",
@@ -608,7 +608,7 @@
     "_ = torch.matmul(x, x)\n",
     "end.record()\n",
     "torch.cuda.synchronize()  # Waits for everything to finish running on the GPU\n",
-    "print(f\"GPU time: {0.001 * start.elapsed_time(end):6.5f}s\")  # Milliseconds to seconds"
+    "print(f\"GPU time: {0.001 * start.elapsed_time(end):.5f}s\")  # Milliseconds to seconds"
    ]
   },
   {
