--- a/tutorial_1/Introduction_to_PyTorch_assignments.ipynb
+++ b/tutorial_1/Introduction_to_PyTorch_assignments.ipynb
@@ -633,6 +633,8 @@
     "    \n",
     "# Additionally, some operations on a GPU are implemented stochastic for efficiency\n",
     "# We want to ensure that all operations are deterministic on GPU (if used) for reproducibility\n",
+    "# See: https://pytorch.org/docs/stable/generated/torch.use_deterministic_algorithms.html?highlight=use_deterministic#torch.use_deterministic_algorithms\n",
+    "\n",
     "torch.backends.cudnn.deterministic = True\n",
     "torch.backends.cudnn.benchmark = False"
    ]
