--- a/tutorial_2/Activation_Functions_assignments.ipynb
+++ b/tutorial_2/Activation_Functions_assignments.ipynb
@@ -641,6 +641,7 @@
     "        sns.histplot(data=grads[key], bins=30, ax=key_ax, color=color, kde=True)\n",
     "        key_ax.set_title(\"%s\" % key)\n",
     "        key_ax.set_xlabel(\"Grad magnitude\")\n",
+    "        #key_ax.set_xlim([-0.01, 0.01])\n",
     "        fig_index += 1\n",
     "    fig.suptitle(\"Gradient magnitude distribution for activation function %s\" % (net.config[\"act_fn\"][\"name\"]), fontsize=14, y=1.05)\n",
     "    fig.subplots_adjust(wspace=0.45)\n",
@@ -675,7 +676,7 @@
     "The sigmoid activation function shows a clearly undesirable behavior. While the gradients for the output layer are very large with up to 0.1, the input layer has the lowest gradient norm across all activation functions with only 1e-5. This is due to its small maximum gradient of 1/4, and finding a suitable learning rate across all layers is not possible in this setup.\n",
     "All the other activation functions show to have similar gradient norms across all layers. Interestingly, the ReLU activation has a spike around 0 which is caused by its zero-part on the left, and dead neurons (we will take a closer look at this later on).\n",
     "\n",
-    "Note that additionally to the activation, the initialization of the weight parameters can be crucial. By default, PyTorch uses the [Kaiming](https://pytorch.org/docs/stable/nn.init.html#torch.nn.init.kaiming_uniform_) initialization for linear layers optimized for Tanh activations. In Tutorial 4, we will take a closer look at initialization, but assume for now that the Kaiming initialization works for all activation functions reasonably well."
+    "Note that additionally to the activation, the initialization of the weight parameters can be crucial. By default, PyTorch uses the [Kaiming](https://pytorch.org/docs/stable/nn.init.html#torch.nn.init.kaiming_uniform_) initialization for linear layers optimized for Tanh activations. We can assume for now that the Kaiming initialization works for all activation functions reasonably well."
    ]
   },
   {
