--- a/tutorial_2/Activation_Functions_assignments.ipynb
+++ b/tutorial_2/Activation_Functions_assignments.ipynb
@@ -709,6 +709,7 @@
     "        batch_size - Size of batches used in training\n",
     "        overwrite - Determines how to handle the case when there already exists a checkpoint. If True, it will be overwritten. Otherwise, we skip training.\n",
     "    \"\"\"\n",
+    "    \n",
     "    file_exists = os.path.isfile(_get_model_file(CHECKPOINT_PATH, model_name))\n",
     "    if file_exists and not overwrite:\n",
     "        print(\"Model file already exists. Skipping training...\")\n",
@@ -717,12 +718,14 @@
     "            print(\"Model file exists, but will be overwritten...\")\n",
     "            \n",
     "        # Defining optimizer, loss and data loader\n",
-    "        optimizer = optim.SGD(net.parameters(), lr=1e-2, momentum=0.9) # Default parameters, feel free to change\n",
-    "        loss_module = nn.CrossEntropyLoss() \n",
+    "        optimizer          = optim.SGD(net.parameters(), lr=1e-2, momentum=0.9) # Default parameters, feel free to change\n",
+    "        loss_module        = nn.CrossEntropyLoss() \n",
     "        train_loader_local = data.DataLoader(train_set, batch_size=batch_size, shuffle=True, drop_last=True, pin_memory=True)\n",
     "\n",
     "        val_scores = []\n",
     "        best_val_epoch = -1\n",
+    "        \n",
+    "        # Training loop\n",
     "        for epoch in range(max_epochs):\n",
     "            ##############\n",
     "            ## Training ##\n",
