--- a/tutorial_2/Activation_Functions_assignments.ipynb
+++ b/tutorial_2/Activation_Functions_assignments.ipynb
@@ -802,6 +802,7 @@
    },
    "outputs": [],
    "source": [
+    "# Train for each activation function\n",
     "for act_fn_name in act_fn_by_name:\n",
     "    print(\"Training BaseNetwork with %s activation...\" % act_fn_name)\n",
     "    set_seed(42)\n",
